# rtech-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build  build.cmd  build.sh  rtech.doxygen  stylesheet.css
.github/workflows/: master.yml  push.yml
cmake/: FindGLM.cmake  FindSDL2.cmake
dependencies/: CMakeLists.txt
docs/: annotated.html  bounding__box_8h_source.html  bounding__sphere_8h_source.html  classes.html  classrtech_1_1_engine-members.html  classrtech_1_1_engine.html  classrtech_1_1_logger-members.html  classrtech_1_1_logger.html  classrtech_1_1_scene-members.html  classrtech_1_1_scene.html  classrtech_1_1_scene_node-members.html  classrtech_1_1_scene_node.html  classrtech_1_1math_1_1_bounding_box-members.html  classrtech_1_1math_1_1_bounding_box.html  classrtech_1_1math_1_1_bounding_sphere-members.html  classrtech_1_1math_1_1_bounding_sphere.html  classrtech_1_1math_1_1_frustum-members.html  classrtech_1_1math_1_1_frustum.html  classrtech_1_1math_1_1_math_helper-members.html  classrtech_1_1math_1_1_math_helper.html  classrtech_1_1math_1_1_matrix-members.html  classrtech_1_1math_1_1_matrix.html  classrtech_1_1math_1_1_plane-members.html  classrtech_1_1math_1_1_plane.html  classrtech_1_1math_1_1_quaternion-members.html  classrtech_1_1math_1_1_quaternion.html  classrtech_1_1math_1_1_ray-members.html  classrtech_1_1math_1_1_ray.html  classrtech_1_1math_1_1_rectangle-members.html  classrtech_1_1math_1_1_rectangle.html  classrtech_1_1math_1_1_vector2-members.html  classrtech_1_1math_1_1_vector2.html  classrtech_1_1math_1_1_vector3-members.html  classrtech_1_1math_1_1_vector3.html  classrtech_1_1math_1_1_vector4-members.html  classrtech_1_1math_1_1_vector4.html  common_8h.html  common_8h_source.html  config_8h_source.html  dir_d44c64559bbebec7f509842c48db8b23.html  (+73 more)
docs/latex/: annotated.tex  classrtech_1_1_engine.tex  classrtech_1_1_logger.tex  classrtech_1_1_scene.tex  classrtech_1_1_scene_node.tex  classrtech_1_1math_1_1_bounding_box.tex  classrtech_1_1math_1_1_bounding_sphere.tex  classrtech_1_1math_1_1_frustum.tex  classrtech_1_1math_1_1_math_helper.tex  classrtech_1_1math_1_1_matrix.tex  classrtech_1_1math_1_1_plane.tex  classrtech_1_1math_1_1_quaternion.tex  classrtech_1_1math_1_1_ray.tex  classrtech_1_1math_1_1_rectangle.tex  classrtech_1_1math_1_1_vector2.tex  classrtech_1_1math_1_1_vector3.tex  classrtech_1_1math_1_1_vector4.tex  common_8h.tex  files.tex  index.tex  refman.tex  struct_matrix.tex  struct_matrix3.tex  struct_quaternion.tex  struct_vec2.tex  struct_vec3.tex  struct_vec4.tex
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  files_0.js  functions_0.js  functions_1.js  functions_10.js  (+30 more)
include/: actor.h  app.h  camera.h  common.h  config.h  config.h.in  engine.h  input.h  logger.h  model.h  package_manager.h  rtech.h  scene.h  scenenode.h  singleton.h  types.h
include/geometry/: mesh.h
include/materials/: material.h
include/math/: bounding_box.h  bounding_box.inl  bounding_sphere.h  bounding_sphere.inl  frustum.h  math_helper.h  math_helper.inl  matrix.h  matrix.inl  plane.h  plane.inl  quaternion.h  quaternion.inl  ray.h  ray.inl  rectangle.h  vector2.h  vector2.inl  vector3.h  vector3.inl  vector4.h  vector4.inl
include/package/: package.h
include/textures/: texture.h
include/types/: font.h  shader.h
samples/: CMakeLists.txt
samples/00-hello-triangle/: CMakeLists.txt  main.cpp
src/: app.cpp  engine.cpp  input.cpp  logger.cpp  main.cpp  package_manager.cpp  scene.cpp  scenenode.cpp
src/math/: bounding_box.cpp  bounding_sphere.cpp  frustum.cpp  math_helper.cpp  matrix.cpp  plane.cpp  quaternion.cpp  ray.cpp  rectangle.cpp  vector2.cpp  vector3.cpp  vector4.cpp
src/package/: package.cpp
